--- a/History of spaced repetition/04.1987 SuperMemo 1.0 for DOS.md
+++ b/History of spaced repetition/04.1987 SuperMemo 1.0 for DOS.md
@@ -1,66 +1,123 @@
 # 1987: SuperMemo 1.0 for DOS
 
+# 1987：DOS 上的 SuperMemo 1.0
+
 ## SuperMemo 1.0: day by day (1987)
 
 [SuperMemo history page](http://super-memory.com/english/history.htm#1987) at *supermemo.com* says that "*Wozniak wrote his first SuperMemo in 16 evenings*". The reality was a bit more complex. Let me describe it in detail using the notes from the day.
 
+SuperMemo的历史页面上写着:“沃兹尼亚克在16个晚上写了他的第一份超级备忘录。”实际情况要复杂一些。让我用当天的笔记来详细描述一下。
+
 ### Building up for the idea
+
+### 为这个想法做准备
 
 I cannot figure out what I meant writing on Jul 3, 1987 that "*I have an idea for a revolutionary program arranging my work and scientific experiments in SMTests*" (*SMTests* stands for [SuperMemo on paper](https://supermemo.guru/wiki/SuperMemo_on_paper) here). A transition from paper to a computer seems like an obvious step. There must have been some mental obstacle on the way that required "thinking out of the box". Unfortunately, I did not write down details. Today it only matters in that it illustrates how excruciatingly slow a seemingly obvious idea may creep into the mind.
 
+ 我不明白我在1987年7月3日写的“*我有一个革命性的计划，在SMTests*中安排我的工作和科学实验”是什么意思(*SMTests*在这里代表[SuperMemo on paper](https://supermemo.guru/wiki/SuperMemo_on_paper))。从纸张到计算机的过渡似乎是显而易见的一步。在这条路上一定有一些精神障碍，需要“跳出框框思考”。不幸的是，我没有写下细节。今天，它唯一重要的是，它说明了一个看似显而易见的想法可能会缓慢得令人痛苦。
+
 On Sep 8, 1987, my first PC arrived from Germany (Amstrad PC 1512). My enthusiasm was unmatched! I could not sleep. I worked all night. The first program I planned to write was to be used for mathematical approximations. SuperMemo was second in the pipeline.
+
+1987年9月8日，我的第一台个人电脑从德国运来(Amstrad PC 1512)。我的热情无与伦比!我睡不着。我工作了一整夜。我计划编写的第一个程序是用于数学近似。SuperMemo是第二家上市公司。
 
 [![Amstrad PC-1512 DD](https://supermemo.guru/images/thumb/d/de/Schneider_Amstrad_PC_1512_DD.png/200px-Schneider_Amstrad_PC_1512_DD.png)](https://supermemo.guru/wiki/File:Schneider_Amstrad_PC_1512_DD.png)
 
 > ***Figure:** Amstrad PC-1512 DD. My version had only one diskette drive. Operating system MS-DOS had to be loaded from one diskette, Turbo Pascal 3.0 from another diskette, SuperMemo from yet another. Until I had my first hard drive in 1991, my English collection had to be split into 3000-item portions. My 39,000 items had to be kept on 13 diskettes. I had many more for other areas of knowledge. On Jan 21, 1997, SuperMemo World has tracked down that original PC and bought it back from its owner: Jarek Kantecki. The PC was fully functional for the whole decade. It is now buried somewhere in dusty archives of the company. Perhaps we will publish its picture at some point. The presented picture comes from Wikipedia*
+>
+> ***图片：**我的版本只有一个磁盘驱动器。操作系统MS-DOS必须从一个磁盘加载，Turbo Pascal 3.0必须从另一个磁盘加载，SuperMemo必须从另一个磁盘加载。直到1991年我有了自己的第一个硬盘，我的英语收藏不得不分成3000个部分。我的39000件物品被保存在13个磁盘上。我有很多其他领域的知识。1997年1月21日，SuperMemo World找到了那台最初的个人电脑，并从它的主人Jarek Kantecki手中买了回来。这台个人电脑在整整十年里功能齐全。现在它被埋在公司尘封的档案中。也许我们会在某个时候发布它的照片。图片来自维基百科*
 
 Oct 16, 1987, Fri, in 12 hours I wrote my first SuperMemo in GW-Basic (719 minutes of non-stop programming). It was slow like a snail and buggy. I did not like it much. I did not start learning. Could this be the end of [SuperMemo](https://supermemo.guru/wiki/SuperMemo)? Wrong choice of a programming language? Busy days at school kept me occupied with a million unimportant things. Typical school effect: learn nothing about everything. No time for creativity and your own learning. Luckily, I never stopped using [SuperMemo on paper](https://supermemo.guru/wiki/SuperMemo_on_paper). The idea of SuperMemo could not have died. It had to be automated sooner or later.
 
+1987年10月16日，星期五，在12个小时内，我用GW-Basic写了我的第一个超级备忘录(719分钟的不间断编程)。它像蜗牛一样慢，而且很笨重。我不太喜欢它。我没有开始学习。这会是[SuperMemo](https://supermemo.guru/wiki/SuperMemo)的终结吗?错误的编程语言选择?在学校忙碌的日子让我忙于无数不重要的事情。典型的学校效应:什么都不学。没有时间去创造和学习。幸运的是，我从未停止使用[SuperMemo on paper](https://supermemo.guru/wiki/SuperMemo_on_paper)。超级备忘录的想法不可能消亡。它迟早要自动化。
+
 On Nov 14, 1987, Sat, SuperMemo on paper got its first user: [Mike Kubiak](https://supermemo.guru/wiki/Mike_Kubiak). He was very enthusiastic. The fire kept burning. On Nov 18, I learned about Turbo Pascal. It did not work on my computer. In those days, if you had a wrong graphics card, you might struggle. Instead of [Hercules](https://en.wikipedia.org/wiki/Hercules_Graphics_Card), I had a text-mode monochrome (black-and-white) [CGA](https://en.wikipedia.org/wiki/Color_Graphics_Adapter). I managed to solve the problem by editing programs in the RPED text editor rather than in the Turbo Pascal environment. Later I got the right version of Turbo Pascal for my display card. Incidentally, old SuperMemos show in colors. I was programming it in shades of gray, and never knew how it really looked in the color mode.
 
-### Writing SuperMemo 1.0
+1987年11月14日，Sat上的超级备忘录迎来了它的第一个用户:[Mike Kubiak](https://supermemo.guru/wiki/Mike_Kubiak)。他非常热情。火一直在燃烧。11月18日，我了解了涡轮帕斯卡。我的电脑坏了。在那些日子里，如果你有一个错误的显卡，你可能会挣扎。我没有使用[Hercules](https://en.wikipedia.org/wiki/Hercules_Graphics_Card)，而是使用了文本模式单色(黑白)[CGA](https://en.wikipedia.org/wiki/Color_Graphics_Adapter)。我设法通过在RPED文本编辑器而不是在Turbo Pascal环境中编辑程序来解决这个问题。后来我得到了正确版本的涡轮帕斯卡为我的显示卡。顺便提一下，旧的超级备忘录是有颜色的。我用深浅不一的灰色来编程，从来不知道它在颜色模式下到底是什么样子。
+
+### Writing SuperMemo 1.0编写 
+
+### SuperMemo 1.0
 
 SuperMemo 1.0 chronology:
 
+SuperMemo 1.0 年表
+
 - Nov 21, 1987 was an important day. It was a Saturday. Days free from school are days of creativity. I hoped to get up at 9 am but I overslept by 72 minutes. This is bad for the [plan](https://supermemo.guru/wiki/Plan), but this is usually great for the brain and the productivity. I started the day from learning with [SuperMemo on paper](https://supermemo.guru/wiki/SuperMemo_on_paper) (reviewing English, human biology, computer science, etc.). Later in the day, I read my Amstrad PC manual, learned about Pascal and Prolog, spent some time thinking about how the human cortex might work, did some exercise, and in the late evening, in a slightly tired state of mind, in afterthought, decided to write [SuperMemo for DOS](https://supermemo.guru/wiki/SuperMemo_for_DOS). This would be my second attempt. However, this time I chose Turbo Pascal 3.0 and never regretted. To this day, as a direct consequence, [SuperMemo 17](https://supermemo.guru/wiki/SuperMemo_17) code is written in Pascal (Delphi XE3). The name *SuperMemo* was proposed much later. In those days, I called my program: *SMTOP* for *Super-Memorization Test Optimization Program*. In 1988, [Tomasz Kuehn](https://supermemo.guru/wiki/Tomasz_Kuehn) insisted we call it *CALOM* for *Computer-Aided Learning Optimization Method*.
+- 1987年11月21日是一个重要的日子。那是一个星期六。不用上学的日子是充满创造力的日子。我本希望早上9点起床，但我睡过头了72分钟。这不利于[计划](https://supermemo.guru/wiki/Plan)，但这通常对大脑和生产力有好处。我用[SuperMemo on paper](https://supermemo.guru/wiki/SuperMemo_on_paper)(复习英语、人类生物学、计算机科学等)开始新的一天。当天晚些时候,我读我的连电脑手册,了解帕斯卡和Prolog,花了一些时间思考人类的皮层如何工作,做了一些锻炼,晚上,略显疲惫的精神状态,在事后,决定写[SuperMemo DOS) (https://supermemo.guru/wiki/SuperMemo_for_DOS)。这将是我第二次尝试。然而，这次我选择了Turbo Pascal 3.0，并没有后悔。直到今天，直接的结果是，[SuperMemo 17](https://supermemo.guru/wiki/SuperMemo_17)的代码是用Pascal (Delphi XE3)编写的。“超级备忘录”(SuperMemo)的名字是在很久以后才提出来的。在那些日子里，我把我的程序命名为:*SMTOP* for * super - memory Test Optimization program *。1988年，[Tomasz Kuehn](https://supermemo.guru/wiki/Tomasz_Kuehn)坚持称其为*CALOM* for *Computer-Aided Learning Optimization Method*。
 - Nov 22, 1987 was a mirror copy of Nov 21. I concluded that I know how the brain cortex worksm and that one day it would be nice to build a computer using similar principles (check [Jeff Hawkins](https://en.wikipedia.org/wiki/Jeff_Hawkins)'s work). The fact that I returned to programming SuperMemo in the late evening, i.e. very bad time for creative work, seems to indicate that the passion has not kicked in yet.
+- 1987年11月22日是11月21日的翻版。我的结论是，我知道大脑皮层是如何工作的，有一天，用类似的原理来建造一台电脑将是件好事(参见杰夫霍金斯[Jeff Hawkins](https://en.wikipedia.org/wiki/Jeff_Hawkins)的工作)。事实上，我在深夜回到编程超级备忘录，也就是非常不适合做创造性工作的时候，似乎表明我的热情还没有开始。
 - Nov 23, 1987 looked identical. I am not sure why I did not have any school obligations on Monday, but this might have saved SuperMemo. On Nov 24, 1987, the excitement kicked in and I worked for 8 hours straight (in the evening again). The program had a simple menu and could add new items to the database.
+- 1987年11月23日看起来一模一样。我不知道为什么我周一没有任何学校的义务，但这可能会节省SuperMemo。1987年11月24日，我开始兴奋起来，连续工作了8个小时(又是晚上)。该程序有一个简单的菜单，可以向数据库添加新项目。
 - Nov 25, 1987 was wasted: I had to go to school, I was tired and sleepy. We had excruciatingly boring classes in computer architecture, probably a decade behind the status quo in the west.
+- 1987年11月25日被浪费了:我必须去上学，我又累又困。我们上的计算机架构课非常无聊，可能比西方的现状落后了10年。
 - Nov 26 was free again and again I was able to catch up with SuperMemo work. The program grew to be 15,400 bytes "huge". I concluded the program might be "*very usefull*" (sic!).
+- 11月26日是自由的，我一次又一次地赶上了SuperMemo的工作。程序增长到15400字节“巨大”。我的结论是，这个程序可能“非常有用”(原文如此!)
 - On Nov 27, I added 3 more hours of work after school.
+- 11月27日，我放学后又增加了3个小时的工作时间。
 - Nov 28 was Saturday and I could add 12 enthusiastic hours of non-stop programming. SuperMemo now looked like almost ready for use.
+- 11月28日是周六，我可以增加12个小时不间断的热情节目。SuperMemo现在看起来差不多可以使用了。
 - On Nov 29, Sunday, I voted for economic reforms and democratization in Poland. In the evening, I did not make much progress. I had to prepare an essay for my English class. The essay described the day when I experimented with alcohol one day in 1982. I was a teetotaller, but as a biologist, I concluded I need to know how alcohol affects the mind.
+- 11月29日，星期天，我投票赞成波兰的经济改革和民主化。晚上，我没有取得多大的进步。我必须为英语课准备一篇作文。这篇文章描述了1982年的一天，我尝试喝酒。我是个滴酒不沾的人，但作为一名生物学家，我的结论是，我需要知道酒精是如何影响大脑的。
 - Nov 30 was wasted at school, but we had a nice walk home with [Biedalak](https://supermemo.guru/wiki/Krzysztof_Biedalak). We had a long conversation in English about our future. That future was mostly to be about science, probably in the US.
+- 11月30日在学校被浪费了，但是我们和Biedalak一起很愉快地走回家(https://supermemo.guru/wiki/Krzysztof_Biedalak)。我们用英语就我们的未来进行了长时间的交谈。那个未来主要是关于科学的，可能在美国。
 - Dec 1-4 were wasted at school again. No time for programming. In a conversation with some Russian professor, I realized that I completely forgot Russian in short 6 years. I used to be proudly fluent! I had to channel my programming time into some boring software for designing electronic circuits. I had to do it to credit a class in electronics. I had a deal with the teacher that I would not attend lectures, just write this piece of software. I did not learn anything and to this day I mourn the waste of time. If I was free, I could have invested this energy in SuperMemo.
+- 12月1日至4日在学校又浪费了。没有时间编程。在与一位俄罗斯教授的交谈中，我意识到我在短短的6年时间里完全忘记了俄语。我曾经骄傲地说一口流利的英语!我不得不把我的编程时间用在一些设计电子电路的无聊软件上。我必须这样做才能获得电子学的学分。我和老师说好了我不去上课，只写这款软件。我什么也没学到，直到今天我还在为浪费时间而悲哀。如果我有时间，我可以把这些精力投入到SuperMemo中。
 - Dec 5 was a Saturday. Free from school. Hurray! However, I had to start from wasting 4 hours on some "keycode procedure". In those days, even decoding the key pressed might become a challenge. And then another hour wasted on changing some screen attributes. In addition, I added 6 hours for writing "item editor". This way, I could conveniently edit items in SuperMemo. The effortless things you take for granted today: cursor left, cursor right, delete, up, new line, etc. needed a day of programming back then.
+- 12月5日是星期六。从学校自由。华友世纪!然而，我不得不从浪费4个小时在一些“关键代码过程”开始。在那些日子里，甚至破译按键也可能成为一项挑战。然后又浪费了一个小时来更改一些屏幕属性。此外，我还增加了6个小时的时间来编写“项目编辑器”。这样，我可以方便地在SuperMemo中编辑条目。今天您认为理所当然的事情:游标左、游标右、delete、up、new line等都需要一天的编程。
 - Dec 6 was a lovely Sunday. I spent 7 hours debugging SuperMemo, adding "[final drill](https://supermemo.guru/wiki/Final_drill)", etc. The excitement kept growing. In a week, I might start using my new breakthrough speed-learning software.
+- 12月6日是一个可爱的星期天。我花了7个小时调试SuperMemo，添加了“[final drill](https://supermemo.guru/wiki/Final_drill)”等。兴奋之情与日俱增。一周后，我可能会开始使用我的新突破性的快速学习软件。
 - On Monday, Dec 7, after school, I added a procedure for deleting items.
+- 12月7日星期一放学后，我添加了一个删除条目的程序。
 - On Dec 8, while Reagan and Gorbachev signed their [nuclear deal](https://en.wikipedia.org/wiki/Intermediate-Range_Nuclear_Forces_Treaty), I added a procedure for searching items and displaying some item statistics. SuperMemo "bloated" to 43,800 bytes.
+- 12月8日，里根和戈尔巴乔夫签署了他们的[核协议](https://en.wikipedia.org/wiki/middle - range_nuclear _forces - treaty)，我添加了一个搜索条目和显示某些条目统计数据的程序。SuperMemo“膨胀”到43,800字节。
 - Dec 9 was marred by school and programming for the electronics class.
+- 12月9日被学校和电子学课程的编程给毁了。
 - On Dec 10, I celebrated power cuts at school. Instead of boring classes, I could do some extra programming.
+- 12月10日，我在学校庆祝停电。我可以做一些额外的编程，而不是上无聊的课。
 - On Dec 11, we had a lovely lecture with one of the biggest brains at the university: Prof. Jan Weglarz. He insisted that he could do more in Poland than abroad. This was a powerful message. However, in 2018, his Wikipedia entry says that his two-phase method discovery was ignored, and later duplicated in the west because he opted for publishing in Polish. Weglarz created a formidable team of best operations research brains in Poznan indeed. If I did not sway in the direction of [SuperMemo](https://supermemo.guru/wiki/SuperMemo), I would sure come with a begging hat to look for an employment opportunity. In the evening, I added a procedure for inspecting the number of [items](https://supermemo.guru/wiki/Item) to review each day. This is today's [**Calendar**](http://help.supermemo.org/wiki/Calendar) (or **Workload** in older versions).
+- 12月11日，我们和大学里最有头脑的人之一简·韦格拉茨教授进行了一次愉快的讲座。他坚持认为他在波兰能做的比在国外更多。这是一个强有力的信息。然而，在2018年，他在维基百科上的条目说，他的两阶段方法发现被忽视了，后来在西方复制了，因为他选择用波兰语出版。韦格拉茨教授在Poznan创造了一个强大的团队，拥有最优秀的运筹学人才。如果我不转向[SuperMemo](https://supermemo.guru/wiki/SuperMemo)，我肯定会带着一顶乞求的帽子来找工作。晚上，我添加了一个程序来检查每天要检查的[条目]的数量(https://supermemo.guru/wiki/Item)。这是今天的[**Calendar**](http://help.supermemo.org/wiki/Calendar)(或者旧版本的**Workload**)。
 
 ### First repetitions in SuperMemo
 
+### 第一次在SuperMemo中重复
+
 Dec 12, 1987 was a Saturday. I expanded [SuperMemo](https://supermemo.guru/wiki/SuperMemo) by a pending queue editor, and seemed ready to start learning, however, … on Dec 13, I was hit by a bombshell: "*Out of memory*". Turbo Pascal refused to compile my program for it grew too large. In those days, memory in DOS was split in 64KB segments and I was probably limited to using just a single segment. I somehow managed to fix the problem by optimizing the code.
+
+1987年12月12日是星期六。我通过一个等待处理的队列编辑器扩展了[SuperMemo](https://supermemo.guru/wiki/SuperMemo)，似乎准备开始学习，然而，……12月13日，我被一个炸弹击中:“*内存不足*”。Turbo Pascal拒绝编译我的程序，因为它太大了。在那些日子里，DOS中的内存被分割成64KB的段，我可能只能使用一个段。我设法通过优化代码来解决这个问题。
 
 The last option I needed to add to SuperMemo was for the program to read the date. Reading the date was a big deal hack in those days. Without it, I would need to type in the current date at every day at the start of the work with [SuperMemo](https://supermemo.guru/wiki/SuperMemo).
 
+我需要添加到SuperMemo中的最后一个选项是程序读取日期。在那些日子里，阅读日期是一件大事。如果没有它，我将需要在每天开始使用[SuperMemo](https://supermemo.guru/wiki/SuperMemo)时输入当前日期。
+
 Finally, at long last, in the afternoon, on Dec 13, 1987, I was able to add my first items to my human biology collection: questions about the autonomic nervous system. As much as July 31, 1985 could be considered the birthday of [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition). Dec 13, 1987 could be named the birthday of spaced repetition software.
+
+终于，在1987年12月13日的下午，我终于能够将我的第一个项目添加到我的人类生物学收藏中:关于自主神经系统的问题。早在1985年7月31日就被认为是[间隔重复]的生日(https://supermemo.guru/wiki/Spaced_repetition)。1987年12月13日是间隔重复软件诞生的日子。
 
 [Spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) software was born on Dec 13, 1987
 
+间隔重复 软件诞生于1987年12月13日
+
 By Dec 23, 1987, my combined paper and [computer databases](https://supermemo.guru/wiki/Collection) included 3795 questions on human biology (of which almost 10% were already stored in my new [SuperMemo](https://supermemo.guru/wiki/SuperMemo) program database). Sadly, I had to remove the possibility of storing full repetition histories from SuperMemo on that day. There wasn't enough space on 360K diskettes. Spaced repetition research would need to wait a few more years. Only in 1996, SuperMemo resumed collecting the full record of repetitions.
+
+到1987年12月23日，我的论文和[计算机数据库](https://supermemo.guru/wiki/Collection)包含了3795个关于人类生物学的问题(其中近10%已经存储在我新的[SuperMemo](https://supermemo.guru/wiki/SuperMemo)程序数据库中)。遗憾的是，那天我不得不从SuperMemo中删除存储完整重复历史的可能性。在360K的磁盘上没有足够的空间。间隔重复研究需要再等几年。直到1996年，SuperMemo才重新开始收集重复次数的完整记录。
 
 [![SuperMemo 1.0 for DOS (1987)](https://supermemo.guru/images/thumb/e/ea/SuperMemo_1_for_DOS_%28in_black_and_white%29.jpg/800px-SuperMemo_1_for_DOS_%28in_black_and_white%29.jpg)](https://supermemo.guru/wiki/File:SuperMemo_1_for_DOS_(in_black_and_white).jpg)
 
 > ***Figure:** SuperMemo 1.0 for DOS (1987) was the first computer application of spaced repetition. It introduced Algorithm SM-2 that remains popular three decades later*
+>
+> ***图片：**SuperMemo 1.0 for DOS(1987)是第一个使用间隔重复的计算机。它引入的算法SM-2在30年后仍然很流行*
 
 ## Algorithm SM-2
 
+## 算法 SM-2
+
 Here is the description of the algorithm used in SuperMemo 1.0 for DOS (1987). The description was taken from my [Master's Thesis](https://supermemo.guru/wiki/Master's_Thesis) written 2.5 years later (1990). SuperMemo 1.0 was soon replaced by a better-looking SuperMemo 2.0 that I would give away to friends at the university. There were insignificant updates to the repetition spacing algorithm that was named Algorithm SM-2 after the version of [SuperMemo](https://supermemo.guru/wiki/SuperMemo). This means there has never been Algorithm SM-1.
 
+下面是在SuperMemo 1.0 for DOS(1987)中使用的算法的描述。这个描述取自我2.5年后(1990年)写的[硕士论文](https://supermemo.guru/wiki/Master's _thesis)。SuperMemo 1.0很快就被一个更好看的SuperMemo 2.0所取代，我把它送给了大学里的朋友们。重复间隔算法在[SuperMemo]版本之后被命名为算法SM-2 (https://supermemo.guru/wiki/SuperMemo)。这意味着从来没有算法SM-1。
+
 I mastered 1000 questions in biology in the first 8 months of use. Even better, I memorized exactly 10,000 items of English word pairs in the first 365 days. I worked an average of 40 minutes per day. This speed of learning was used as a benchmark in advertising SuperMemo in its first commercial days. Even today, 40 minutes is the daily investment recommended to master [Advanced English](https://supermemo.guru/wiki/Advanced_English) in 4 years (40,000+ items).
+
+在使用的头8个月里，我掌握了1000道生物题。更棒的是，在最初的365天里，我准确地记住了一万对英语单词。我平均每天工作40分钟。这种学习速度在SuperMemo最初的商业时代被用作广告的基准。即使在今天，每天花40分钟来掌握[高级英语]也是值得的(https://supermemo.guru/wiki/Advanced_English)。
 
 [**Algorithm SM-2** remains popular](https://supermemo.guru/wiki/Exponential_growth_of_the_popularity_of_Algorithm_SM-2) and is still used by applications such as [Anki](https://supermemo.guru/wiki/Anki), [Mnemosyne](https://supermemo.guru/wiki/Mnemosyne), and more.
 
@@ -68,14 +125,34 @@ Archive warning: [Why use literal archives?](https://supermemo.guru/wiki/Why_use
 
 This text was part of: "*Optimization of learning*" by [Piotr Wozniak](https://supermemo.guru/wiki/Piotr_Wozniak) (1990)
 
+[#算法SM-2** remains popular](https://supermemo.guru/wiki/exponential_growth_the_popularity_of_算法SM-2)，仍然被应用程序像[Anki]一样使用(https://supermemo.guru/wiki/Anki)， [Mnemosyne](https://supermemo.guru/wiki/Mnemosyne)。
+
+
+
+档案警告:为什么使用literal archives?
+
+
+
+这篇文章是[Piotr Wozniak]的一部分:“改进学习”(https://supermemo.guru/wiki/Piotr_Wozniak) (1990)
+
 **3.2. Application of a computer to improve the results obtained in working with the SuperMemo method**
 
 **I wrote the first SuperMemo program in December 1987 (Turbo Pascal 3.0, IBM PC). It was intended to enhance the SuperMemo method in two basic ways:**
 
+* **3.2。应用计算机对SuperMemo方法的计算结果进行改进**
+
+
+
+**我在1987年12月编写了第一个SuperMemo程序(Turbo Pascal 3.0, IBM PC)。它旨在以两种基本方式增强SuperMemo方法:**
+
 - apply the optimization procedures to smallest possible [items](https://supermemo.guru/wiki/Item) (in the [paper-based SuperMemo](https://supermemo.guru/wiki/Paper-based_SuperMemo) items were grouped in pages),
+- 将优化过程应用到尽可能小的[items](https://supermemo.guru/wiki/Item)(在[基于纸张的SuperMemo](https://supermemo.guru/wiki/paperbased_supermemo)中，
 - differentiate between the items on the base of their different [difficulty](https://supermemo.guru/wiki/Difficulty).
+- 根据不同的[难度]来区分项目(https://supermemo.guru/wiki/难度)。
 
 Having observed that subsequent inter-repetition intervals are increasing by an approximately constant factor (e.g. two in the case of the SM-0 algorithm for English vocabulary), I decided to apply the following formula to calculate inter-repetition intervals:
+
+观察到后续的重复间隔增加了一个近似常数的因子(例如英语词汇量的SM-0算法增加了两个)，我决定用下面的公式来计算重复间隔:
 
 > I(1):=1
 >
@@ -87,12 +164,25 @@ Having observed that subsequent inter-repetition intervals are increasing by an 
 >
 > - I(n) - inter-repetition interval after the n-th repetition (in days)
 > - EF - easiness factor reflecting the easiness of memorizing and retaining a given item in memory (later called the [E-Factor](https://supermemo.guru/wiki/E-Factor)).
+>
+> 上式中：
+>
+> - I(n) -重复n次后的重复间隔(以天为单位)
+> - EF -轻松因素反映了记忆和记忆一个给定的项目的轻松程度(后来称为[E-Factor](https://supermemo.guru/wiki/E-Factor))。
+>
+>
 
 E-Factors were allowed to vary between 1.1 for the most difficult items and 2.5 for the easiest ones. At the moment of introducing an item into a SuperMemo database, its E-Factor was assumed to equal 2.5. In the course of repetitions, this value was gradually decreased in case of recall problems. Thus the greater problems an item caused in recall the more significant was the decrease of its E-Factor.
 
+电子因素允许在最困难的1.1和最简单的2.5之间变化。在将一个条目引入SuperMemo数据库时，它的E-Factor被假定为2.5。在重复的过程中，这个值会随着回忆问题的出现而逐渐降低。因此，一个项目在召回中引起的问题越大，其e因子的降低就越显著。
+
 Shortly after the first SuperMemo program had been implemented, I noticed that E-Factors should not fall below the value of 1.3. Items having E-Factors lower than 1.3 were repeated annoyingly often and always seemed to have inherent flaws in their formulation (usually they did not conform to the [minimum information principle](https://supermemo.guru/wiki/Minimum_information_principle)). Thus not letting E-Factors fall below 1.3 substantially improved the throughput of the process and provided an indicator of items that should be reformulated. The formula used in calculating new E-Factors for items was constructed heuristically and did not change much in the following 3.5 years of using the computer-based SuperMemo method.
 
+在第一个SuperMemo程序实现后不久，我注意到E-Factors不应该低于1.3。电子因素低于1.3的项目经常被重复使用，而且似乎总是存在固有的缺陷(通常它们不符合[最小信息原则](https://supermemo.guru/wiki/Minimum_information_principle))。因此，不让电子因素降至1.3以下大大提高了流程的吞吐量，并为需要重新制定的项目提供了一个指标。计算项目新电子因子的公式是启发式构造的，在接下来的3.5年里，使用基于计算机的SuperMemo方法并没有太大的变化。
+
 In order to calculate the new value of an E-Factor, the student has to assess the quality of his response to the question asked during the repetition of an item (my SuperMemo programs use the 0-5 grade scale - the range determined by the ergonomics of using the numeric key-pad). The general form of the formula used was:
+
+为了计算一个电子因素的新值，学生必须评估他在重复一个项目时回答问题的质量(我的SuperMemo程序使用0-5级量表——使用数字键盘的人机工程学决定的范围)。公式的一般形式为:
 
 > EF':=f(EF,q)
 >
@@ -102,20 +192,39 @@ In order to calculate the new value of an E-Factor, the student has to assess th
 > - EF - old value of the E-Factor
 > - q - quality of the response
 > - f - function used in calculating EF'.
+>
+> EF':=f(EF,q)
+>
+> 上式中：
+>
+> - EF' - e因子的新值
+> - EF - e因子的旧值
+> - q - 回应的质素
+> - f - 用于计算EF'的函数。
 
 The function f had initially multiplicative character and was in later versions of SuperMemo program, when the interpretation of E-Factors changed substantially, converted into an additive one without significant alteration of dependencies between EF', EF and q. To simplify further considerations only the function f in its latest shape is taken into account:
+
+函数f最初乘法性格和SuperMemo计划在以后的版本,当解释E-Factors大幅改变,转换成一个添加剂没有显著改变之间的依赖性EF的EF和q,进一步简化考虑只在其最新的形状函数f是考虑:
 
 > EF':=EF-0.8+0.28*q-0.02*q*q
 
 which is a reduced form of:
 
+这是以下形式的简化形式:
+
 > EF':=EF+(0.1-(5-q)*(0.08+(5-q)*0.02))
 
 Note, that for q=4 the E-Factor does not change.
 
+注意，对于q=4, e因子没有变化。
+
 Let us now consider the final form of the SM-2 algorithm that with minor changes was used in the SuperMemo programs, versions 1.0-3.0 between December 13, 1987 and March 9, 1989 (the name SM-2 was chosen because of the fact that SuperMemo 2.0 was by far the most popular version implementing this algorithm).
 
+现在让我们考虑的最终形式SM-2 SuperMemo中使用的算法,与微小的改动程序,版本1.0 - -3.0之间的12月13日,1987年和1989年3月9日(这个名字SM-2被选中,因为SuperMemo 2.0是迄今为止最受欢迎的版本实现这个算法)。
+
 Algorithm SM-2 used in the computer-based variant of the SuperMemo method and involving the calculation of easiness factors for particular items:
+
+算法SM-2用于基于计算机的SuperMemo方法的变体中，涉及到对特定项目的易用性因素的计算:
 
 1. Split the knowledge into smallest possible items.
 2. With all items associate an E-Factor equal to 2.5.
@@ -125,8 +234,24 @@ Algorithm SM-2 used in the computer-based variant of the SuperMemo method and in
 6. If the quality response was lower than 3 then start repetitions for the item from the beginning without changing the E-Factor (i.e. use intervals I(1), I(2) etc. as if the item was memorized anew).
 7. After each repetition session of a given day repeat again all items that scored below four in the quality assessment. Continue the repetitions until all of these items score at least four.
 
-The optimization procedure used in finding E-Factors proved to be very effective. In SuperMemo programs you will always find an option for displaying the distribution of E-Factors (later called the E-Distribution). The shape of the E-Distribution in a given database was roughly established within few months since the outset of repetitions. This means that E-Factors did not change significantly after that period and it is safe to presume that E-Factors correspond roughly to the real factor by which the inter-repetition intervals should increase in successive repetitions.
+   1.把知识分成尽可能小的部分。
+
+   2.所有项的e因子都等于2.5。
+
+   3.使用以下间隔重复项目:
+
+   4.每次重复后用0-5级量表评定重复反应的质量:
+
+   5.每次重复后，根据公式修改最近重复项的e因子:
+
+   6.如果质量反应低于3，那么就从一开始重复，不要改变E-Factor(即使用interval I(1)， I(2)等，就像重新记忆一样)。
+
+   7.在某一天的每一次重复训练之后，重复所有在质量评估中得分低于4分的项目。继续重复，直到所有这些项目得分至少4分。
 
 During the first year of using the SM-2 algorithm (learning English vocabulary), I memorized 10,255 items. The time required for creating the database and for repetitions amounted to 41 minutes per day. This corresponds to the acquisition rate of 270 items/year/min. The overall retention was 89.3%, but after excluding the recently memorized items (intervals below 3 weeks) which do not exhibit properly determined E-Factors the retention amounted to 92%. Comparing the SM-0 and SM-2 algorithms one must consider the fact that in the former case the retention was artificially high because of hints the student is given while repeating items of a given page. Items preceding the one in question can easily suggest the correct answer.
 
-Therefore the Algorithm SM-2, though not stunning in terms of quantitative comparisons, marked the second major improvement of the      
+在使用SM-2算法(学习英语词汇)的第一年，我记住了10255个单词。创建数据库和重复所需要的时间为每天41分钟。这相当于270个项目/年/分钟的采收率。整体记忆率为89.3%，但剔除近期记忆的(间隔在3周以下)未显示出正确确定的e因素后，记忆率为92%。比较SM-0和SM-2算法，我们必须考虑这样一个事实:在前一种情况下，由于学生在重复给定页面的项时得到了提示，所以保留率被人为地提高了。问题前面的项目可以很容易地给出正确答案。
+
+Therefore the Algorithm SM-2, though not stunning in terms of quantitative comparisons, marked the second major improvement of the 
+
+因此，算法SM-2虽然在数量上没有惊人的比较，但标志着第二大改进     
